gdb debugging: describe how to trace heap allocations with gperftools